ajout d'un titre

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
        <p><a href="stage p2.html"> Vas voir ici </a> </p>
        <h2 class="college">L'échiquier Noyellois </h2>
        <p>C'est un club tranquille.</p>
+       <p>Et très convivial</p>
 
 
        <p> <img src="images/echecN.png" alt="club echec" title="club échec "> <a href="stage8.html">L'échiquier Noyellois</a>  
