--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
              <link rel="preconnect" href="https://fonts.googleapis.com">
              <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
              <link href="https://fonts.googleapis.com/css2?family=Playwrite+IS:wght@100..400&display=swap" rel="stylesheet">
+             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
              <title>Mon site</title>
 </head> 
 <body>
@@ -30,7 +31,7 @@
                     </li>
                   
             </ul>
-       <h1 class="titre"> <span class="Maxence"> Maxence </span> fait son 1er site web </h1> 
+       <h1 class="titre" onclick="afficherTexte()"> <span class="Maxence"> Maxence </span> fait son 1er site web </h1> 
        <p class="tonton"> <span class="tonton2"> Debut  </span> je fais mon premier site web en html et en CSS à l'edhec je suis en 4eme et je suis presque en vacances.</p>
        <p><img src="images/edheclogo.png" alt="homme heureux" title="hahahahahahahahahaha"> <span class="image_tonton" >Lieu de mon premier stage </span></p>
        <p> <a href="https://www.edhec.edu/fr/a-propos/qui-sommes-nous/la-marque-edhec" class="Vince" > Site de l'EDHEC </a></p>
@@ -76,6 +77,8 @@
 
 
             </ul>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            <script src="scripts.js"></script>
 </body>
 
 </html>
