--- a/stage6.html
+++ b/stage6.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+IS:wght@100..400&display=swap" rel="stylesheet">
-    <title>Mon site</title>
+    <title>Mes origines</title>
 </head>  
 <body>
 
