--- a/stage6.html
+++ b/stage6.html
@@ -24,8 +24,9 @@
                 <p> <a href="stagep3.html">Concours </a></p>
        </li>  
        <li>
-            <p> <a href="https://youtu.be/IER8QvjQK0o?si=6zgPGxVxbwC63oDm">youtube</a></p>
-            </li>
+        <p> <a href="stage8.html">Echecs</a></p>
+
+    </li>
             
             
     </ul>
@@ -50,7 +51,8 @@
 
         </li>
         <li>
-            <p> <a href="https://youtu.be/IER8QvjQK0o?si=6zgPGxVxbwC63oDm">youtube</a></p>
+            <p> <a href="stage8.html">Echecs</a></p>
+
         </li>
 </ul>
 </body>
