--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
        <p> <img src="images/echecN-removebg-preview.png" alt="club echec" title="club échec "> <a href="stage8.html">L'échiquier Noyellois</a>  
        </p>
-       
-
-
+       <h1 class="jv">Les Jeux Vidéos </h1>
+       <p class="playstation"> Déjà Playstation, C'est trop bien, il y a a plein de jeux comme rocket league, fortnite, minecraft... 
+        <p> <img src="images/image-removebg-preview.png" alt=""></p><p>
+        <a href="stage9.html">Continuer...</a>
+       </p>
        <p> <h5 class="para5">Concours</h5></p>
         <p> <span class="lien"> <a href="stagep3.html"> cliquez ici pour gagner un ordinateur portable</a>  </span> </p>
         <ul class="menu">
