--- a/stage9.html
+++ b/stage9.html
@@ -31,8 +31,7 @@
             
     </ul>
     <h1 class="tonton">Playstation</h1>
-    <p class="Pe">Tout d'abord la PS5 c'est quoi ? 
-        La PlayStation 5 est disponible depuis le 19 novembre 2020. Elle fait partie de la dernière et nouvelle génération de consoles, aux côtés de la Xbox Series X.
+    <p class="Pe">D'abord la PS5 c'est quoi ? La PlayStation 5 est disponible depuis le 19 novembre 2020. Elle fait partie de la dernière et nouvelle génération de consoles, aux côtés de la Xbox Series X.
         
         <iframe width="1227" height="690" src="https://www.youtube.com/embed/RkC0l4iekYo" title="PS5 Hardware Reveal Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </p>
