--- a/stage6.html
+++ b/stage6.html
@@ -27,7 +27,10 @@
         <p> <a href="stage8.html">Echecs</a></p>
 
     </li>
-            
+    <li>
+        <p> <a href="stage9.html">Playstation</a></p>
+
+    </li>   
             
     </ul>
   <h1   class="polonais" >un polonais :</h1>
@@ -52,6 +55,10 @@
         </li>
         <li>
             <p> <a href="stage8.html">Echecs</a></p>
+
+        </li>
+        <li>
+            <p> <a href="stage9.html">Playstation</a></p>
 
         </li>
 </ul>
