--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
        <h1 class="titre" onclick="afficherTexte()"> <span class="Maxence"> Maxence </span> fait son 1er site web </h1> 
        <p class="tonton"> <span class="tonton2"> Debut  </span> je fais mon premier site web en html et en CSS à l'edhec je suis en 4eme et je suis presque en vacances.</p>
        <p><img src="images/edheclogo-removebg-preview.png" alt="homme heureux" title="hahahahahahahahahaha"> <span class="image_tonton" >Lieu de mon premier stage </span></p>
-       <p> <a href="https://www.edhec.edu/fr/a-propos/qui-sommes-nous/la-marque-edhec" class="Vince" > Site de l'EDHEC </a></p>
-       <p><iframe width="1227" height="690" src="https://www.youtube.com/embed/CAwNt2PM10E" title="EDHEC Lille Campus Presentation | EDHEC Business School" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+       <p> consulter le  <a href="https://www.edhec.edu/fr/a-propos/qui-sommes-nous/la-marque-edhec" class="Vince" > Site de l'EDHEC </a></p>
+       <p> ou regarder la présentation de mon lieu de stage qui est <a href="stage11.html">l'EDHEC </a></p>
        <h2 class="para2" >il est l'heure</h2>
        <p  >On est des <a href="stage6.html">polonais</a> donc ça y va ! </p>
        <h3 class="para3" >Vidéo youtube</h3>
@@ -56,10 +56,10 @@
        </p>
        <h1 class="jv">Les Jeux Vidéos </h1>
        <p class="playstation"> Déjà Playstation, C'est trop bien, il y a a plein de jeux comme rocket league, fortnite, minecraft... 
-        <p> <img src="images/image-removebg-preview.png" alt=""></p><p>
-            exemple d'un gameplay de jeux PS5 :
-            <iframe width="1227" height="690" src="https://www.youtube.com/embed/QKVaZ6SDr3Y" title="Stylé nan" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <a href="stage9.html">Continuer...</a>
+        <p> <img src="images/image-removebg-preview.png" alt=""></p><p><a href="stage9.html">Continuer...</a> ou regarder un 
+        <a href="stage10.html">Gameplay PS5</a>
+            
+        
        </p>
        <p> <h5 class="para5">Concours</h5></p>
         <p> <span class="lien"> <a href="stagep3.html"> cliquez ici pour gagner un ordinateur portable</a>  </span> </p>
